<resources>
    <string name="app_name" translatable="false">BillionBeers</string>
    <string name="title_dynamicfeature" translatable="false">beerdetail</string>
    <string name="filter_preset_limit_reached">You can save up to 10 filters. Delete one before saving another.</string>
    <string name="filter_preset_save_failed">The filter could not be saved.</string>
</resources>
