...
        )
      },
      label = { Text(stringResource(R.string.favorites_title)) },
      colors = itemColors,
    )
    NavigationBarItem(
      modifier = Modifier.testTag("saved_filters_tab"),
      selected = selectedTab == SavedFilterPresets,
      onClick = { onTabSelect(SavedFilterPresets) },
      icon = {
        Icon(
          Icons.AutoMirrored.Filled.List,
          contentDescription = stringResource(R.string.saved_filters_title),
...
