...
    <string name="favorites_title">Favorites</string>
    <string name="favorites_empty">No favorite beers yet</string>
    <string name="favorite_update_failed">Couldn\'t update favorite</string>
    <string name="home_tab">Home</string>
    <string name="saved_filters_title">Saved filters</string>
    <string name="filter_name_hint">Filter name</string>
    <string name="save_filter">Save filter</string>
    <string name="all_styles">All styles</string>
    <string name="clear_style">Clear style</string>
    <string name="clear_filters">Clear filters</string>
</resources>

